--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "@angular/cli": "^20.1.0",
     "@angular/compiler-cli": "^20.1.0",
     "typescript": "^5.8.2"
+  },
+  "volta": {
+    "node": "20.19.0"
   }
 }
